# jdrones

./: .buildinfo  .coveragerc  .dockerignore  .docstr.yaml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CNAME  MANIFEST.in  README.md  authors.doctree  authors.html  changelog.doctree  changelog.html  cliff.toml  controllers.doctree  controllers.html  data_models.doctree  data_models.html  environment.yml  envs.doctree  envs.html  genindex.html  index.doctree  index.html  license.doctree  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.doctree  readme.html  requirements.txt  search.html  searchindex.js  settings.toml  setup.cfg  (+5 more)
.github/: dependabot.yml
.github/workflows/: CD.yml  CI.yml  CI_testmon.yml  requirements.docstr-cov.txt
_modules/: index.html
_modules/jdrones/: controllers.html  data_models.html  trajectory.html  types.html
_modules/jdrones/envs/: attitude.html  base.html  costfunction.html  drone.html  lqr.html  position.html  trajectory.html  velocityheading.html
_modules/jdrones/envs/base/: basecontrolledenv.html  basedronenev.html  lineardronenev.html  nonlineardronenev.html  pbdronenev.html
_sources/: authors.md.txt  changelog.md.txt  controllers.rst.txt  envs.rst.txt  index.rst.txt  readme.md.txt
_sources/examples/: examples.rst.txt  linearise_nonlinear_model.ipynb.txt  mpc_drone.ipynb.txt
docs/: README.md  conf.py  controllers.rst  data_models.rst  envs.rst  index.rst  requirements.txt  sphinx_warning_ignore.txt  trajectory.rst  types.rst
docs/examples/: drl_3d_wp_w_energy.py  drl_hover_square_error.py  examples.rst  ga_tune_lqr_drone.ipynb  linearise_nonlinear_model.ipynb  mpc_drone.ipynb  notebook_quick_setup.py  simple_attitude.ipynb  simple_position.ipynb  simple_velocity_heading.ipynb  visual_validations.ipynb
docs/examples/drl_3d_wp/: README.md  __main__.py  callback.py  consts.py  docker-compose.yml  env.py  policies.py  state.py
docs/examples/drl_3d_wp_w_energy/: __init__.py  __main__.py  callback.py  consts.py  env.py  state.py
examples/: examples.doctree  examples.html  ga_tune_lqr_drone.doctree  ga_tune_lqr_drone.html  linearise_nonlinear_model.doctree  linearise_nonlinear_model.html  mpc_drone.doctree  mpc_drone.html  simple_attitude.doctree  simple_attitude.html  simple_position.doctree  simple_position.html  simple_position.ipynb  simple_velocity_heading.doctree  simple_velocity_heading.html  simple_velocity_heading.ipynb  visual_validations.doctree  visual_validations.html
examples/drl_3d_wp/: README.doctree  README.html
nbsphinx/examples/: visual_validations.ipynb
src/jdrones/: __init__.py  controllers.py  data_models.py  energy_model.py  maths.py  plotting.py  solvers.py  trajectory.py  transforms.py  types.py  wrappers.py
src/jdrones/envs/: __init__.py  attitude.py  base.py  costfunction.py  drone.py  dronemodels.py  droneplus.urdf  lqr.py  position.py  rotating.py  trajectory.py  velocity.py  velocityheading.py
src/jdrones/envs/base/: __init__.py  __main__.py  basecontrolledenv.py  basedronenev.py  lineardronenev.py  nonlineardronenev.py  pbdronenev.py
src/jdrones/envs/quad/: __init__.py  __main__.py  lineardronenev.py  nonlineardronenev.py  pbdronenev.py
src/jdrones/envs/trajectory/: __init__.py  pid.py  poly.py
src/jdrones/envs/x_wing/: __init__.py  nonlineardroneenv.py
tests/: conftest.py  requirements.txt  test_data_models.py  test_drone.py  test_energy_model.py  test_gym_api.py  test_maths.py  test_pid.py  test_plotting.py  test_polynomial_traj.py  test_solvers.py  test_transforms.py  test_types.py  test_wrappers.py
tests/envs/: conftest.py  test_position.py  test_stress.py  test_velocityheading.py
tests/envs/base/: conftest.py  test_linear_drone.py  test_nonlinear_drone.py  test_pybullet3_drone.py  test_pybullet3_heightfield.py
tests/envs/position/: test_fifth_o_LA.py  test_fifth_order.py  test_first_order.py  test_opt_fifth_order.py  test_position_utils.py  test_stress.py
tests/envs/quad/: test_quad_linear_drone.py  test_quad_nonlinear_drone.py  test_quad_pybullet3_drone.py
tests/envs/x_wing/: test_nonlinear_drone.py
