[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jdrones"
description = "PyBullet models prepared for usage via the gymnasium environment"
readme = "README.md"
authors = [{ name = "iwishiwasaneagle", email = "jh.ewers@gmail.com" }]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "libjdrones>=0.1.1",
    "loguru",
    "numpy",
    "scipy",
    "gymnasium",
    "pybullet",
    "pydantic",
    "nptyping",
    "numba"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/iwishiwasaneagle/jdrones/"
Source = '"https://github.com/iwishiwasaneagle/jdrones"'

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-extra-markers",
]
examples = [
    "sbx-rl",
    "optuna",
    "sb3-contrib",
    "tensorboard",
    "tensorflow-probability==0.23.0",
    "click",
    "wandb"
]

[tool.rstcheck]
ignore_directives = [
    "automodule",
    "autoclass",
]
ignore_messages = "([dD]uplicate implicit|not referenced)"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/jdrones/_version.py"
build.targets.wheel.artifacts = [
    "**/_version.py"
]
